--- a/app/src/main/res/layouts/shared/layout/card_boxscore.xml
+++ b/app/src/main/res/layouts/shared/layout/card_boxscore.xml
@@ -2,7 +2,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:bind="http://schemas.android.com/tools">
+        xmlns:bind="http://schemas.android.com/tools"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -17,28 +18,148 @@
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
         card_view:cardCornerRadius="@dimen/card_corner_radius"
-        app:cardBackgroundColor="@color/cardViewBackground">
+        app:cardBackgroundColor="@color/cardViewBackground"
+        android:visibility="@{viewModel.visibility}">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginEnd="@dimen/medium_margin">
 
-            <include
-                layout="@layout/item_boxscore"
-                bind:summary="@{viewModel.topTeamSummary}"
-                bind:viewModel="@{viewModel}"
-                bind:teamImageUrl="@{viewModel.topTeamImageUrl}"
-                bind:playerName="@{viewModel.topName}"/>
+            <LinearLayout
+                android:id="@+id/boxscore_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/medium_margin"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:orientation="vertical">
 
-            <include
-                layout="@layout/item_boxscore"
-                bind:summary="@{viewModel.bottomTeamSummary}"
-                bind:viewModel="@{viewModel}"
-                bind:teamImageUrl="@{viewModel.bottomTeamImageUrl}"
-                bind:playerName="@{viewModel.bottomName}"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:textAppearance="@style/text_bold_grey_small"
+                    android:text=""/>
 
-        </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/top_player_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/top_team_imageview"
+                        android:layout_width="@dimen/match_team_logo_size"
+                        android:layout_height="@dimen/match_team_logo_size"
+                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                        android:scaleType="fitCenter"
+                        app:imageUrl="@{viewModel.topTeamImageUrl}"/>
+
+                    <TextView
+                        android:id="@+id/top_team_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                        android:gravity="center_vertical"
+                        android:text="@{viewModel.topName}"
+                        android:textAppearance="@style/text_white_small"/>
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="150dp"
+                    android:layout_height="1dp"
+                    android:background="@color/cardViewHeaderBackground"/>
+
+                <LinearLayout
+                    android:id="@+id/bottom_player_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/bottom_team_imageview"
+                        android:layout_width="@dimen/match_team_logo_size"
+                        android:layout_height="@dimen/match_team_logo_size"
+                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                        android:scaleType="fitCenter"
+                        app:imageUrl="@{viewModel.bottomTeamImageUrl}"/>
+
+                    <TextView
+                        android:id="@+id/bottom_team_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                        android:gravity="center_vertical"
+                        android:text="@{viewModel.bottomName}"
+                        android:textAppearance="@style/text_white_small"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/boxscore_title"
+                android:orientation="horizontal"
+                android:layoutDirection="rtl"
+                android:clipChildren="false">
+
+                <include
+                    layout="@layout/item_boxscore"
+                    bind:summary="@{viewModel.fullTime}"
+                    bind:fulltime="@{true}"
+                    bind:textColor="@{@android:color/white}"
+                    bind:title="@{@string/ft}"/>
+
+                <include
+                    layout="@layout/item_boxscore"
+                    bind:summary="@{viewModel.penalties}"
+                    bind:fulltime="@{false}"
+                    bind:textColor="@{@android:color/secondary_text_dark}"
+                    bind:title="@{@string/pk}"
+                    android:visibility="@{viewModel.penaltiesVisibility}"/>
+
+                <include
+                    layout="@layout/item_boxscore"
+                    bind:summary="@{viewModel.secondExtraTime}"
+                    bind:fulltime="@{false}"
+                    bind:textColor="@{@android:color/secondary_text_dark}"
+                    bind:title="@{@string/et2}"
+                    android:visibility="@{viewModel.secondExtraTimeVisibility}"/>
+
+                <include
+                    layout="@layout/item_boxscore"
+                    bind:summary="@{viewModel.firstExtraTime}"
+                    bind:fulltime="@{false}"
+                    bind:textColor="@{@android:color/secondary_text_dark}"
+                    bind:title="@{@string/et1}"
+                    android:visibility="@{viewModel.firstExtraTimeVisibility}"/>
+
+                <include
+                    layout="@layout/item_boxscore"
+                    bind:summary="@{viewModel.secondHalf}"
+                    bind:fulltime="@{false}"
+                    bind:textColor="@{@android:color/secondary_text_dark}"
+                    bind:title='@{"2"}'/>
+
+                <include
+                    layout="@layout/item_boxscore"
+                    bind:summary="@{viewModel.firstHalf}"
+                    bind:fulltime="@{false}"
+                    bind:textColor="@{@android:color/secondary_text_dark}"
+                    bind:title='@{"1"}'/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
