Begin conversion to stats card for match creation

--- a/app/src/main/res/layouts/shared/layout/card_update_stats.xml
+++ b/app/src/main/res/layouts/shared/layout/card_update_stats.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.card.UpdateStatsCardViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.card.MatchStatsViewModel"/>
     </data>
 
     <LinearLayout
