--- a/app/src/main/res/layouts/shared/layout/activity_create_match.xml
+++ b/app/src/main/res/layouts/shared/layout/activity_create_match.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:title="@string/new_match"
+                android:title="@string/match"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </android.support.design.widget.AppBarLayout>
