--- a/app/src/main/res/layouts/shared/layout/card_update_stats.xml
+++ b/app/src/main/res/layouts/shared/layout/card_update_stats.xml
@@ -15,14 +15,34 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin"
-            android:textAppearance="@style/text_bold_grey_small"
-            android:text="@string/stats"/>
+            android:layout_marginBottom="@dimen/activity_horizontal_margin">
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:textAppearance="@style/text_bold_grey_small"
+                android:text="@string/stats"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/tiny_margin"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_camera_alt_white_24dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:tint="@{viewModel.accentColor}"
+                android:visibility="@{viewModel.cameraButtonVisibility}"
+                android:onClick="@{() -> viewModel.onCameraButtonClick()}"/>
+            
+        </RelativeLayout>
+
 
         <android.support.v7.widget.CardView
             android:id="@+id/update_stats_card_view"
