--- a/app/src/main/res/layouts/shared/layout/fragment_create_match.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_create_match.xml
@@ -8,25 +8,27 @@
             type="com.example.kevin.fifastatistics.viewmodels.fragment.CreateMatchFragmentViewModel"/>
     </data>
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/nested_scroll_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/update_layout"
+        <include
+            layout="@layout/create_event_header"
+            bind:viewModel="@{viewModel.headerViewModel}"/>
+
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/update_padding_bottom"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <include
-                android:id="@+id/card_update_stats_layout"
-                layout="@layout/card_update_stats"
-                bind:viewModel="@{viewModel.statsCardViewModel}" />
+                <include
+                    android:id="@+id/card_update_stats_layout"
+                    layout="@layout/card_update_stats"
+                    bind:viewModel="@{viewModel.statsCardViewModel}" />
 
-        </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
 
-    </android.support.v4.widget.NestedScrollView>
+    </LinearLayout>
 
 </layout>
