Basic leaders card

--- a/app/src/main/res/layouts/useroverview/layout/user_overview_data_layout.xml
+++ b/app/src/main/res/layouts/useroverview/layout/user_overview_data_layout.xml
@@ -35,6 +35,10 @@
             bind:stats="@{viewModel.stats}"
             bind:title="@{viewModel.name}"/>
 
+        <include
+            layout="@layout/card_leaders"
+            bind:viewModel="@{viewModel.leaders}"/>
+
     </LinearLayout>
 
 </layout>
