--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,7 @@
     <color name="material_drawer_dark_selected_text">#4CAF50</color>
     <color name="gold">#FFD700</color>
 
+    <color name="circle_background">#808080</color>
+    <color name="text_main">@color/white</color>
+
 </resources>
