Add headers to leader card

--- a/app/src/main/res/layouts/shared/layout/card_leaders.xml
+++ b/app/src/main/res/layouts/shared/layout/card_leaders.xml
@@ -41,8 +41,8 @@
                     android:id="@+id/header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    bind:headerLeft="test"
-                    bind:headerRight="test">
+                    bind:headerLeft="@{viewModel.leftHeader}"
+                    bind:headerRight="@{viewModel.rightHeader}">
                 </include>
 
                 <include
