--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="search_item_size">48dp</dimen>
     <dimen name="search_list_item_height">72dp</dimen>
     <dimen name="shutter_size">45dp</dimen>
+    <dimen name="footballer_drop_down_width">170dp</dimen>
 
     <dimen name="civ_border_width">4dp</dimen>
     <dimen name="progress_loader_item_margin">5dp</dimen>
