--- a/app/src/main/res/layouts/shared/layout/item_create_match_event.xml
+++ b/app/src/main/res/layouts/shared/layout/item_create_match_event.xml
@@ -57,6 +57,7 @@
             android:dropDownAnchor="@{View.NO_ID}"
             app:iconifiedByDefault="false"
             android:onSuggestionClick="@{viewModel.onSuggestionClick}"
+            android:onClearListener="@{viewModel.onClearListener}"
             app:textAdapter="@{viewModel.adapter}"/>
 
         <TextView
