--- a/app/src/main/res/layouts/shared/layout/item_text.xml
+++ b/app/src/main/res/layouts/shared/layout/item_text.xml
@@ -10,6 +10,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:padding="@dimen/activity_horizontal_margin"
         android:text="@{text}"
         android:textAppearance="@style/text_small"/>
 
