--- a/app/src/main/res/layouts/shared/layout/item_create_match_event.xml
+++ b/app/src/main/res/layouts/shared/layout/item_create_match_event.xml
@@ -20,13 +20,26 @@
             android:layout_width="@dimen/match_team_logo_size"
             android:layout_height="@dimen/match_team_logo_size"
             android:layout_marginEnd="@dimen/medium_margin"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/big_margin"
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/tiny_margin"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
             android:scaleType="fitCenter"
             app:imageUrl="@{viewModel.teamImageUrl}"/>
+
+        <ImageButton
+            android:id="@+id/switch_sides_button"
+            android:layout_width="@dimen/match_team_logo_size"
+            android:layout_height="@dimen/match_team_logo_size"
+            android:layout_marginEnd="@dimen/medium_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginStart="@dimen/tiny_margin"
+            android:layout_below="@id/team_imageview"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/ic_swap_horiz_white_24dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/switch_sides"
+            android:onClick="@{() -> viewModel.onChangeTeam()}"/>
 
         <include
             layout="@layout/headshot"
